--- a/docs/main.css
+++ b/docs/main.css
@@ -7,12 +7,14 @@
 html,
 body
 {
+    margin: 0;
     font-family: 'Poppins';
     background: rgb(24,24,24);
 }
 
 .megacontenedor {
    background: #333333
+   
 }
 
 .header {
@@ -20,6 +22,38 @@ body
     color: white; 
     border-bottom: 1px white solid;
     background: rgb(24,24,24);
+}
+
+.contenidoYSidebar {
+    display: grid;
+    grid-template-columns: 20% 80%;
+    grid-gap: 10px;
+    grid-auto-rows: minmax(50px, auto);
+    grid-template-areas:
+    "sidebar contenedor";
+}
+
+.sidebar {
+    grid-area: sidebar;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+}
+
+.tituloSidebar {
+    font-size: 2rem;
+    text-transform: uppercase;
+    color: white;
+    text-align: center;
+}
+
+.itemSidebar {
+    padding: 1rem;
+    text-decoration: auto;
+}
+
+.contenedorDeContenido {
+    background-color: rgb(24,24,24);
 }
 
 .contenedor {
@@ -30,12 +64,29 @@ body
     grid-template-areas:
         "titulo titulo canvas"
         "presentacion presentacion presentacion"
-        "texto texto texto";
-    
-   
+        "texto texto texto"
+        "contenedorLayout contenedorLayout contenedorLayout";
+    grid-area: contenedor;   
 }
 
-@media only screen and (max-width: 600px)  {
+.center {
+    /* max-width: 1300px; */
+    margin: auto;
+    place-items: center;
+    background: rgb(24,24,24);
+    border-left:  grey 1px solid;
+}
+
+@media only screen and (max-width: 900px)  {
+    .contenidoYSidebar {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 10px;
+        grid-auto-rows: minmax(50px, auto);
+        grid-template-areas:
+        "sidebar"
+        "contenedor";
+    }
     .contenedor {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
@@ -43,21 +94,17 @@ body
         grid-auto-rows: minmax(50px, auto);
         grid-template-areas:
             "titulo titulo titulo"
-            ". canvas ."
+            "canvas canvas canvas"
             "presentacion presentacion presentacion"
-            "texto texto texto";
+            "texto texto texto"
+            "contenedorLayout contenedorLayout contenedorLayout";
     }
     .layoutShooter {
         width: 300px;
     }
-}
-
-.center {
-    max-width: 1300px;
-    margin: auto;
-    place-items: center;
-    background: rgb(24,24,24);
-    /* border:  grey 1px solid; */
+    .center {
+        border-left: none;
+    }
 }
 
 .webgl
@@ -68,14 +115,11 @@ body
     align-self: center;
 }
 
-#titulo {
+.titulo {
     font-size: calc(50px + 10 * ((100vw - 320px) / 1480));
     text-transform: uppercase;
     color: white;
     text-align: center;
-}
-
-.titulo {
     grid-area: titulo;
 }
 
@@ -123,10 +167,10 @@ body
     background-color: rgb(24,24,24);
 }
 
-p {
+.itemSidebar, .pMain {
     text-align: center;
     color: white; 
-    font-size: calc(16px + 10 * ((100vw - 320px) / 1480));
+    font-size: calc(18px + 10 * ((100vw - 320px) / 1480));
     font-weight: 500;
     font-family: 'IBM Plex Sans', sans-serif;
     padding-right: 1.8rem;
@@ -135,13 +179,12 @@ p {
 
 .parrafo > p {
     border: 1px solid hotpink;
-    
 }
 
 .contenedorLayout {
     text-align: center;
-    max-width: 1300px;
     margin: auto;
+    grid-area: contenedorLayout;
 }
 
 .celdas {
@@ -151,11 +194,29 @@ p {
     grid-auto-rows: minmax(50px, auto);
 }
 
-
-
 .entraDraggeable {
     border: 1px solid hotpink;
+}
+
+.draggeable {
     
+}
+
+.cuento {
+    max-width: 800px;
+    background-color: rgb(24,24,24);
+    margin: auto;
+}
+
+.cuento > p {
+    text-align: left;
+    color: white; 
+    font-size: 1.2rem;
+    font-weight: 500;
+    font-family: 'IBM Plex Sans', sans-serif;
+    /* text-align: justify; */
+    padding-right: 1.8rem;
+    padding-left: 1.8rem;
 }
 
 /*# sourceMappingURL=main.css.map*/
