--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html,
 body
 {
+    margin: 0;
     font-family: 'Poppins';
     background: rgb(24,24,24);
 }
@@ -51,6 +52,10 @@ body
     text-decoration: auto;
 }
 
+.contenedorDeContenido {
+    background-color: rgb(24,24,24);
+}
+
 .contenedor {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -72,7 +77,7 @@ body
     border-left:  grey 1px solid;
 }
 
-@media only screen and (max-width: 600px)  {
+@media only screen and (max-width: 900px)  {
     .contenidoYSidebar {
         display: grid;
         grid-template-columns: 1fr;
@@ -102,8 +107,6 @@ body
     }
 }
 
-
-
 .webgl
 {
     outline: none;
@@ -112,14 +115,11 @@ body
     align-self: center;
 }
 
-#titulo {
+.titulo {
     font-size: calc(50px + 10 * ((100vw - 320px) / 1480));
     text-transform: uppercase;
     color: white;
     text-align: center;
-}
-
-.titulo {
     grid-area: titulo;
 }
 
@@ -167,7 +167,7 @@ body
     background-color: rgb(24,24,24);
 }
 
-.itemSidebar, p {
+.itemSidebar, .pMain {
     text-align: center;
     color: white; 
     font-size: calc(18px + 10 * ((100vw - 320px) / 1480));
@@ -183,7 +183,6 @@ body
 
 .contenedorLayout {
     text-align: center;
-    max-width: 1300px;
     margin: auto;
     grid-area: contenedorLayout;
 }
@@ -201,4 +200,21 @@ body
 
 .draggeable {
     
+}
+
+.cuento {
+    max-width: 800px;
+    background-color: rgb(24,24,24);
+    margin: auto;
+}
+
+.cuento > p {
+    text-align: left;
+    color: white; 
+    font-size: 1.2rem;
+    font-weight: 500;
+    font-family: 'IBM Plex Sans', sans-serif;
+    /* text-align: justify; */
+    padding-right: 1.8rem;
+    padding-left: 1.8rem;
 }
