--- a/docs/main.css
+++ b/docs/main.css
@@ -230,4 +230,9 @@ body
     margin: auto;
 }
 
+.bloqueMusica {
+    justify-content: center;
+    display: flex;
+}
+
 /*# sourceMappingURL=main.css.map*/
