--- a/style.css
+++ b/style.css
@@ -229,3 +229,8 @@ body
     background-color: rgb(24,24,24);
     margin: auto;
 }
+
+.bloqueMusica {
+    justify-content: center;
+    display: flex;
+}
