--- a/docs/main.css
+++ b/docs/main.css
@@ -8,7 +8,7 @@ body
 {
     margin: 0;
     font-family: 'Poppins';
-    background: rgb(214, 199, 199);
+    background: rgb(200 218 245)
 }
 
 .header {
